--- a/index.css
+++ b/index.css
@@ -1,3 +1,812 @@
-.weather-status {
-  color: rgb(31, 17, 17);
+HTML CSS JSResult Skip Results Iframe html {
+  box-sizing: border-box;
 }
+html *,
+html *:before,
+html *:after {
+  box-sizing: inherit;
+}
+
+body {
+  /* max-width: 42em; */
+  padding: 2em;
+  margin: 0 auto;
+  color: #161616;
+  font-family: 'Roboto', sans-serif;
+  text-align: center;
+  background-color: currentColor;
+}
+
+h1 {
+  margin-bottom: 1.375em;
+  color: #fff;
+  font-weight: 100;
+  font-size: 2em;
+  text-transform: uppercase;
+}
+p,
+a {
+  color: rgba(255, 255, 255, 0.3);
+  font-size: medium;
+}
+p {
+  position: fixed;
+  left: 0px;
+  bottom: 0px;
+  width: 100%;
+  font-size: 1.2rem;
+}
+
+.wrapper {
+  position: relative;
+}
+
+.icon {
+  position: relative;
+  display: inline-block;
+  top: 180px;
+}
+
+.cloud {
+  position: absolute;
+  z-index: 1;
+  top: 50%;
+  left: 50%;
+  width: 3.6875em;
+  height: 3.6875em;
+  margin: -1.84375em;
+  background: currentColor;
+  border-radius: 50%;
+  box-shadow: -2.1875em 0.6875em 0 -0.6875em, 2.0625em 0.9375em 0 -0.9375em, 0 0 0 0.375em #fff, -2.1875em 0.6875em 0 -0.3125em #fff,
+    2.0625em 0.9375em 0 -0.5625em #fff;
+}
+.cloud:after {
+  content: '';
+  position: absolute;
+  bottom: 0;
+  left: -0.5em;
+  display: block;
+  width: 4.5625em;
+  height: 1em;
+  background: currentColor;
+  box-shadow: 0 0.4375em 0 -0.0625em #fff;
+}
+.cloud:nth-child(2) {
+  z-index: 0;
+  background: #fff;
+  box-shadow: -2.1875em 0.6875em 0 -0.6875em #fff, 2.0625em 0.9375em 0 -0.9375em #fff, 0 0 0 0.375em #fff,
+    -2.1875em 0.6875em 0 -0.3125em #fff, 2.0625em 0.9375em 0 -0.5625em #fff;
+  opacity: 0.3;
+  transform: scale(0.5) translate(6em, -3em);
+  animation: cloud 4s linear infinite;
+}
+.cloud:nth-child(2):after {
+  background: #fff;
+}
+
+.sun {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  width: 2.5em;
+  height: 2.5em;
+  margin: -1.25em;
+  background: currentColor;
+  border-radius: 50%;
+  box-shadow: 0 0 0 0.375em #fff;
+  animation: spin 12s infinite linear;
+}
+.rays {
+  position: absolute;
+  top: -2em;
+  left: 50%;
+  display: block;
+  width: 0.375em;
+  height: 1.125em;
+  margin-left: -0.1875em;
+  background: #fff;
+  border-radius: 0.25em;
+  box-shadow: 0 5.375em #fff;
+}
+.rays:before,
+.rays:after {
+  content: '';
+  position: absolute;
+  top: 0em;
+  left: 0em;
+  display: block;
+  width: 0.375em;
+  height: 1.125em;
+  transform: rotate(60deg);
+  transform-origin: 50% 3.25em;
+  background: #fff;
+  border-radius: 0.25em;
+  box-shadow: 0 5.375em #fff;
+}
+.rays:before {
+  transform: rotate(120deg);
+}
+.cloud + .sun {
+  margin: -2em 1em;
+}
+
+.rain,
+.lightning,
+.snow {
+  position: absolute;
+  z-index: 2;
+  top: 50%;
+  left: 50%;
+  width: 3.75em;
+  height: 3.75em;
+  margin: 0.375em 0 0 -2em;
+  background: currentColor;
+}
+
+.rain:after {
+  content: '';
+  position: absolute;
+  z-index: 2;
+  top: 50%;
+  left: 50%;
+  width: 1.125em;
+  height: 1.125em;
+  margin: -1em 0 0 -0.25em;
+  background: #0cf;
+  border-radius: 100% 0 60% 50% / 60% 0 100% 50%;
+  box-shadow: 0.625em 0.875em 0 -0.125em rgba(255, 255, 255, 0.2), -0.875em 1.125em 0 -0.125em rgba(255, 255, 255, 0.2),
+    -1.375em -0.125em 0 rgba(255, 255, 255, 0.2);
+  transform: rotate(-28deg);
+  animation: rain 3s linear infinite;
+}
+
+.bolt {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  margin: -0.25em 0 0 -0.125em;
+  color: #fff;
+  opacity: 0.3;
+  animation: lightning 2s linear infinite;
+}
+.bolt:nth-child(2) {
+  width: 0.5em;
+  height: 0.25em;
+  margin: -1.75em 0 0 -1.875em;
+  transform: translate(2.5em, 2.25em);
+  opacity: 0.2;
+  animation: lightning 1.5s linear infinite;
+}
+.bolt:before,
+.bolt:after {
+  content: '';
+  position: absolute;
+  z-index: 2;
+  top: 50%;
+  left: 50%;
+  margin: -1.625em 0 0 -1.0125em;
+  border-top: 1.25em solid transparent;
+  border-right: 0.75em solid;
+  border-bottom: 0.75em solid;
+  border-left: 0.5em solid transparent;
+  transform: skewX(-10deg);
+}
+.bolt:after {
+  margin: -0.25em 0 0 -0.25em;
+  border-top: 0.75em solid;
+  border-right: 0.5em solid transparent;
+  border-bottom: 1.25em solid transparent;
+  border-left: 0.75em solid;
+  transform: skewX(-10deg);
+}
+.bolt:nth-child(2):before {
+  margin: -0.75em 0 0 -0.5em;
+  border-top: 0.625em solid transparent;
+  border-right: 0.375em solid;
+  border-bottom: 0.375em solid;
+  border-left: 0.25em solid transparent;
+}
+.bolt:nth-child(2):after {
+  margin: -0.125em 0 0 -0.125em;
+  border-top: 0.375em solid;
+  border-right: 0.25em solid transparent;
+  border-bottom: 0.625em solid transparent;
+  border-left: 0.375em solid;
+}
+
+.flake:before,
+.flake:after {
+  content: '\2744';
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  margin: -1.025em 0 0 -1.0125em;
+  color: #fff;
+  /* list-height: 1em; */
+  opacity: 0.2;
+  animation: spin 8s linear infinite reverse;
+}
+.flake:after {
+  margin: 0.125em 0 0 -1em;
+  font-size: 1.5em;
+  opacity: 0.4;
+  animation: spin 14s linear infinite;
+}
+.flake:nth-child(2):before {
+  margin: -0.5em 0 0 0.25em;
+  font-size: 1.25em;
+  opacity: 0.2;
+  animation: spin 10s linear infinite;
+}
+.flake:nth-child(2):after {
+  margin: 0.375em 0 0 0.125em;
+  font-size: 2em;
+  opacity: 0.4;
+  animation: spin 16s linear infinite reverse;
+}
+
+/* Animations */
+
+@keyframes spin {
+  100% {
+    transform: rotate(360deg);
+  }
+}
+
+@keyframes cloud {
+  0% {
+    opacity: 0;
+  }
+  50% {
+    opacity: 0.3;
+  }
+  100% {
+    opacity: 0;
+    transform: scale(0.5) translate(-200%, -3em);
+  }
+}
+
+@keyframes rain {
+  0% {
+    background: #0cf;
+    box-shadow: 0.625em 0.875em 0 -0.125em rgba(255, 255, 255, 0.2), -0.875em 1.125em 0 -0.125em rgba(255, 255, 255, 0.2),
+      -1.375em -0.125em 0 #0cf;
+  }
+  25% {
+    box-shadow: 0.625em 0.875em 0 -0.125em rgba(255, 255, 255, 0.2), -0.875em 1.125em 0 -0.125em #0cf,
+      -1.375em -0.125em 0 rgba(255, 255, 255, 0.2);
+  }
+  50% {
+    background: rgba(255, 255, 255, 0.3);
+    box-shadow: 0.625em 0.875em 0 -0.125em #0cf, -0.875em 1.125em 0 -0.125em rgba(255, 255, 255, 0.2),
+      -1.375em -0.125em 0 rgba(255, 255, 255, 0.2);
+  }
+  100% {
+    box-shadow: 0.625em 0.875em 0 -0.125em rgba(255, 255, 255, 0.2), -0.875em 1.125em 0 -0.125em rgba(255, 255, 255, 0.2),
+      -1.375em -0.125em 0 #0cf;
+  }
+}
+
+@keyframes lightning {
+  45% {
+    color: #fff;
+    background: #fff;
+    opacity: 0.2;
+  }
+  50% {
+    color: #0cf;
+    background: #0cf;
+    opacity: 1;
+  }
+  55% {
+    color: #fff;
+    background: #fff;
+    opacity: 0.2;
+  }
+}
+
+.text {
+  position: relative;
+  font-weight: 100;
+  margin-top: 250px;
+  padding: 0;
+  color: #fff;
+  font-size: 100px;
+}
+
+/* 
+.text ul {
+  list-style: none;
+  margin: 0;
+  padding: 0;
+}
+
+.text ul li {
+  position: absolute;
+  bottom: -50px;
+  color: #fff;
+  font-family: 'Raleway Dots', cursive;
+  font-weight: 100;
+  font-size: 20px;
+  text-align: center;
+  opacity: 0;
+} */
+/* 
+.text ul li:first-child {
+  animation: fade_in 10s 0s linear infinite;
+}
+
+.text ul li:nth-child(2) {
+  animation: fade_in 10s 1.6s linear infinite;
+}
+
+.text ul li:nth-child(3) {
+  animation: fade_in 10s 2.4s linear infinite;
+}
+
+.text ul li:nth-child(4) {
+  animation: fade_in 10s 3.4s linear infinite;
+}
+
+.text ul li:nth-child(5) {
+  animation: fade_in 10s 4s linear infinite;
+}
+
+.text ul li:nth-child(6) {
+  animation: fade_in 10s 5.4s linear infinite;
+}
+
+.text ul li:nth-child(7) {
+  animation: fade_in 10s 6.4s linear infinite;
+}
+
+.text ul li:nth-child(8) {
+  animation: fade_in 10s 7.2s linear infinite;
+}
+
+.text ul li:nth-child(9) {
+  animation: fade_in 10s 8.2s linear infinite;
+} */
+
+/*
+@keyframes sun {
+  0% {
+    opacity: 1;
+    bottom: 35px;
+    right: 35px;
+  }
+  4% {
+    bottom: 80px;
+    right: 80px;
+  }
+  4.5% {
+    bottom: 75px;
+    right: 75px;
+    opacity: 1;
+  }
+  40% {
+    opacity: 1;
+  }
+  41% {
+    bottom: 75px;
+    right: 75px;
+    opacity: 0;
+  }
+  100% {
+    opacity: 0;
+    bottom: 0px;
+    right: 0px;
+  }
+}
+
+@keyframes suni {
+  0% {
+    opacity: 0;
+    bottom: 120px;
+    right: 120px;
+  }
+  4% {
+    bottom: 120px;
+    right: 120px;
+    opacity: 1;
+  }
+  100% {
+    opacity: 1;
+    bottom: 120px;
+    right: 120px;
+  }
+}
+
+@keyframes sunii {
+  0% {
+    opacity: 0;
+    bottom: 20px;
+    margin-left: 110px;
+    transform: rotate(90deg);
+  }
+  4% {
+    opacity: 1;
+    bottom: 20px;
+    margin-left: 110px;
+    transform: rotate(90deg);
+  }
+  100% {
+    opacity: 1;
+    bottom: 20px;
+    margin-left: 110px;
+    transform: rotate(90deg);
+  }
+}
+
+@keyframes suniii {
+  0% {
+    opacity: 0;
+    bottom: -74px;
+    right: 120px;
+  }
+  4% {
+    bottom: -74px;
+    right: 120px;
+    opacity: 1;
+  }
+  100% {
+    opacity: 1;
+    bottom: -74px;
+    right: 120px;
+  }
+}
+
+@keyframes suniiii {
+  0% {
+    opacity: 0;
+    bottom: 20px;
+    margin-left: -70px;
+    transform: rotate(90deg);
+  }
+  4% {
+    opacity: 1;
+    bottom: 20px;
+    margin-left: -70px;
+    transform: rotate(90deg);
+  }
+  100% {
+    opacity: 1;
+    bottom: 20px;
+    margin-left: -70px;
+    transform: rotate(90deg);
+  }
+}
+
+@keyframes cloud {
+  0% {
+    transform: scale(0.8);
+    left: 120px;
+    bottom: 35px;
+    opacity: 0;
+  }
+  2% {
+    opacity: 1;
+  }
+  3.5% {
+    bottom: 35px;
+    left: 10px;
+    opacity: 1;
+  }
+  16% {
+    transform: scale(0.8);
+  }
+  18% {
+    transform: scale(0.95);
+  }
+  19% {
+    transform: scale(0.9);
+  }
+  48% {
+    opacity: 1;
+    bottom: 35px;
+  }
+  50% {
+    bottom: 70px;
+  }
+  64% {
+  }
+  96% {
+    opacity: 1;
+  }
+  100% {
+    opacity: 0;
+    bottom: 70px;
+    left: 10px;
+  }
+}
+
+@keyframes cloud_s {
+  0% {
+    transform: scale(0.6);
+    opacity: 0;
+    bottom: 40px;
+    left: 18px;
+  }
+  23% {
+    opacity: 0;
+  }
+  24% {
+    opacity: 1;
+    bottom: 40px;
+    left: 30px;
+  }
+  28% {
+    opacity: 1;
+    bottom: 85px;
+    left: 60px;
+  }
+  32% {
+    transform: scale(0.6);
+  }
+  34% {
+    transform: scale(0.75);
+  }
+  35% {
+    transform: scale(0.7);
+  }
+  48% {
+    opacity: 1;
+  }
+  49% {
+    opacity: 0;
+  }
+  100% {
+    transform: scale(0.7);
+    opacity: 0;
+    bottom: 85px;
+    left: 60px;
+  }
+}
+
+@keyframes cloud_vs {
+  0% {
+    opacity: 0;
+    bottom: 85px;
+    left: 60px;
+  }
+  39% {
+    opacity: 0;
+  }
+  40% {
+    opacity: 1;
+    bottom: 85px;
+    left: 60px;
+  }
+  42% {
+    bottom: 125px;
+    left: 10px;
+  }
+  43% {
+    bottom: 120px;
+    left: 15px;
+  }
+  48% {
+    opacity: 1;
+  }
+  49% {
+    opacity: 0;
+  }
+  100% {
+    opacity: 0;
+    bottom: 120px;
+    left: 15px;
+  }
+}
+
+@keyframes haze {
+  0% {
+    opacity: 0;
+  }
+  48% {
+    height: 0px;
+    opacity: 0;
+  }
+  49% {
+    height: 45px;
+    opacity: 1;
+  }
+  57% {
+    opacity: 1;
+    height: 45px;
+  }
+  58% {
+    opacity: 0;
+    height: 0px;
+  }
+}
+
+@keyframes haze_stripe {
+  0% {
+    opacity: 0;
+  }
+  48% {
+    opacity: 0;
+  }
+  49% {
+    opacity: 1;
+  }
+  56% {
+    opacity: 1;
+  }
+  57% {
+    opacity: 0;
+  }
+}
+
+@keyframes cloudi {
+  0% {
+    background: #fff;
+  }
+  56% {
+    background: #fff;
+  }
+  57% {
+    background: #92a4b6;
+  }
+  100% {
+    background: #92a4b6;
+  }
+}
+
+@keyframes thunder {
+  0% {
+    opacity: 0;
+    bottom: 100px;
+    left: 65px;
+  }
+  62% {
+    opacity: 0;
+    bottom: 100px;
+    left: 65px;
+  }
+  64% {
+    opacity: 1;
+    bottom: 50px;
+    left: 60px;
+  }
+  65% {
+    opacity: 1;
+    bottom: 55px;
+    left: 61px;
+  }
+  72% {
+    opacity: 1;
+    bottom: 55px;
+    left: 61px;
+  }
+  73% {
+    opacity: 0;
+  }
+  100% {
+    opacity: 0;
+    bottom: 55px;
+  }
+}
+
+@keyframes raini {
+  0% {
+    opacity: 0;
+    bottom: 100px;
+    left: 60px;
+  }
+  72% {
+    opacity: 0;
+    bottom: 100px;
+    left: 60px;
+  }
+  73% {
+    opacity: 1;
+    bottom: 15px;
+    left: 50px;
+  }
+  74% {
+    opacity: 1;
+    bottom: 25px;
+    left: 52px;
+  }
+  80% {
+    opacity: 1;
+    bottom: 25px;
+    left: 52px;
+  }
+  81% {
+    opacity: 0;
+    bottom: -15px;
+    left: 6px;
+  }
+  100% {
+    opacity: 0;
+    bottom: 20px;
+  }
+}
+
+@keyframes rainii {
+  0% {
+    opacity: 0;
+    bottom: 100px;
+    left: 30px;
+  }
+  72% {
+    opacity: 0;
+    bottom: 100px;
+    left: 30px;
+  }
+  73% {
+    opacity: 1;
+    bottom: 15px;
+    left: 20px;
+  }
+  74% {
+    opacity: 1;
+    bottom: 25px;
+    left: 22px;
+  }
+  80% {
+    opacity: 1;
+    bottom: 25px;
+    left: 22px;
+  }
+  81% {
+    opacity: 0;
+    bottom: -15px;
+    left: -6px;
+  }
+  100% {
+    opacity: 0;
+    bottom: 20px;
+  }
+}
+
+@keyframes rainiii {
+  0% {
+    opacity: 0;
+    bottom: 100px;
+    left: 0px;
+  }
+  72% {
+    opacity: 0;
+    bottom: 100px;
+    left: 0px;
+  }
+  73% {
+    opacity: 1;
+    bottom: 15px;
+    left: -10px;
+  }
+  74% {
+    opacity: 1;
+    bottom: 25px;
+    left: -8px;
+  }
+  80% {
+    opacity: 1;
+    bottom: 25px;
+    left: -8px;
+  }
+  81% {
+    opacity: 0;
+    bottom: -15px;
+    left: -28px;
+  }
+  100% {
+    opacity: 0;
+    bottom: 20px;
+  }
+}
+
+@keyframes fade_in {
+  0% {
+    opacity: 0;
+  }
+  25% {
+    opacity: 1;
+  }
+  100% {
+    opacity: 1;
+  }
+} */
